# python-arduino-serial

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pythonarduinoserial/: base_c_struct.py  byte_deserializer.py  byte_formatter.py  byte_serializer.py  c_header_exporter.py  communicator.py  python_extension.py  types.py
pythonarduinoserial/resources/: c_header.h.j2
pythonarduinoserial/usbserial/: abstract.py  api.py  exception.py  pyserial.py  usb4a.py
tests/: test_all_types.h  test_bytes_deserialization.py  test_bytes_serialization.py  test_c_header_exporter.py  values.py
