[build-system]
requires = [
  "setuptools>=46.0",
  "jinja2",
  "pyserial",
]

[project]
name = "pythonarduinoserial"
description = "Bidirectionnal serial communication (C Structs and Python Dataclasses) between Python and Arduino"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]

build-backend = "setuptools.build_meta"
